--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -456,13 +456,23 @@
 
         <receiver
             android:name=".service.EmailBroadcastReceiver"
-            android:enabled="true">
+            android:enabled="true"
+            android:permission="com.android.email.permission.ACCESS_PROVIDER">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.DEVICE_STORAGE_LOW" />
                 <action android:name="android.intent.action.DEVICE_STORAGE_OK" />
                 <action android:name="android.intent.action.LOCALE_CHANGED"/>
                 <action android:name="android.accounts.LOGIN_ACCOUNTS_CHANGED" />
+                <action android:name="com.android.email.intent.action.MAIL_SERVICE_WAKEUP" />
+                <action
+                    android:name="com.android.email.intent.action.MAIL_SERVICE_DELETE_MESSAGE" />
+                <action
+                    android:name="com.android.email.intent.action.MAIL_SERVICE_MOVE_MESSAGE" />
+                <action
+                    android:name="com.android.email.intent.action.MAIL_SERVICE_MESSAGE_READ" />
+                <action
+                    android:name="com.android.email.intent.action.MAIL_SERVICE_SEND_PENDING" />
             </intent-filter>
             <!-- To handle new message notifications -->
             <intent-filter>
@@ -589,6 +599,14 @@
             <intent-filter>
                 <action
                     android:name="com.android.email.IMAP_INTENT" />
+                <action
+                    android:name="com.android.email.intent.action.MAIL_SERVICE_DELETE_MESSAGE" />
+                <action
+                    android:name="com.android.email.intent.action.MAIL_SERVICE_MOVE_MESSAGE" />
+                <action
+                    android:name="com.android.email.intent.action.MAIL_SERVICE_MESSAGE_READ" />
+                <action
+                    android:name="com.android.email.intent.action.MAIL_SERVICE_SEND_PENDING" />
             </intent-filter>
         </service>
 
